[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/justabit.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/SettingsMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 256
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 1 )

[node name="SettingsMenu" type="MarginContainer"]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.12549, 0.133333, 0.145098, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 46.0
margin_top = 264.0
margin_right = 1874.0
margin_bottom = 816.0
custom_constants/separation = 100

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1828.0
margin_bottom = 224.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 530.0
margin_right = 1298.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 1828.0
margin_bottom = 552.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 1828.0
margin_bottom = 228.0

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 1828.0
margin_bottom = 112.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_right = 1828.0
margin_bottom = 112.0
rect_min_size = Vector2( 1828, 0 )
custom_constants/separation = 100

[node name="Soundtrack" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 600.0
margin_bottom = 112.0
rect_min_size = Vector2( 600, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 5 )
text = "Soundtrack:"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 700.0
margin_right = 1828.0
margin_bottom = 112.0
rect_min_size = Vector2( 1128, 0 )

[node name="lSelector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 112.0
rect_min_size = Vector2( 75, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 5 )
align = 1

[node name="CurrentSoundtrack" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 1049.0
margin_bottom = 112.0
rect_min_size = Vector2( 970, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 5 )
text = "Kahoot"
align = 1

[node name="rSelector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/HBoxContainer"]
margin_left = 1053.0
margin_right = 1128.0
margin_bottom = 112.0
rect_min_size = Vector2( 75, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 5 )
text = ">"
align = 1

[node name="CenterContainer6" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 116.0
margin_right = 1828.0
margin_bottom = 228.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer6"]
margin_right = 1828.0
margin_bottom = 112.0
rect_min_size = Vector2( 1828, 0 )

[node name="Back" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer6/HBoxContainer"]
margin_right = 1600.0
margin_bottom = 112.0
rect_min_size = Vector2( 1600, 0 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 5 )
text = "Back"
